--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,15 @@
 {
   "devDependencies": {
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.95",
+    "@swc/jest": "^0.2.29",
+    "@types/jest": "^29.5.7",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
     "typescript": "^5.1.6"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
